# svavto-api-server

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  manage.py  pyproject.toml  requirements.txt
bonuses/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
bonuses/migrations/: 0001_initial.py
bonuses/tests/: factories.py
bonuses/use_cases/: __init__.py  bonuses_excluded_staff_list.py  bonuses_excluded_staff_update.py
car_washes/: admin.py  apps.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  urls.py
car_washes/migrations/: 0001_initial.py  0002_alter_carwash_options.py  0002_carwashservice_priority.py  0002_carwashserviceprice.py  0002_rename_business_class_car_transfer_price_carwash_business_class_car_washing_price_and_more.py  0003_alter_carwashserviceprice_car_wash_and_more.py  0003_carwashservice_delete_carwashserviceprice.py  0003_carwashservice_is_dry_cleaning.py  0004_alter_carwashservice_options.py  0004_carwashservice_max_count.py  0005_carwash_car_transporters_and_washers_business_class_price_and_more.py  0005_remove_carwashservice_car_wash_and_more.py  0006_carwashservice_is_countable.py  0006_remove_carwash_car_transporters_and_washers_windshield_washer_price_per_bottle.py  0007_carwashservice_parent.py  0007_carwashserviceprice_price_for_car_transporter_and_washer.py  0008_alter_carwashservice_id.py  0008_remove_carwashserviceprice_price_for_car_transporter_and_washer.py  0009_alter_carwashservice_name.py  0009_carwash_is_hidden.py  0010_alter_carwash_name_carwash_unique_car_wash_name.py
car_washes/tests/: factories.py
car_washes/use_cases/: __init__.py  car_wash_create.py  car_wash_retrieve.py  car_wash_service_list.py  car_wash_service_price_list.py  car_wash_update.py
car_washes/views/: __init__.py  list_create.py  retrieve_update_delete.py
carsharing/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: admin.py  exceptions.py  models.py  services.py
deposits/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py
deposits/migrations/: 0001_initial.py  0002_roadaccidentdepositexception.py  0003_remove_finedepositexception_unique_fine_deposit_exception_and_more.py
deposits/use_cases/: __init__.py  deposit_list.py
deposits/views/: __init__.py  deposits.py  fine_deposit_exceptions.py  road_accident_deposit_exceptions.py
dry_cleaning/: admin.py  apps.py  exceptions.py  urls.py
dry_cleaning/migrations/: 0001_initial.py  0002_drycleaningadmin.py
economics/: admin.py  apps.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  urls.py
economics/services/: reports.py  (+2 more)
google_sheets/: apps.py  services.py  tasks.py
mailing/: apps.py  serializers.py  services.py  tasks.py  urls.py  views.py
performers/: apps.py  exceptions.py  models.py  selectors.py  services.py  urls.py
photo_upload/: apps.py  exceptions.py  services.py  urls.py  views.py
resources/: car_wash_services.json
retentions/: admin.py  apps.py  models.py
shifts/: admin.py  apps.py  exceptions.py  mixins.py  models.py  selectors.py  serializers.py  tasks.py  urls.py
staff/: admin.py  apps.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  urls.py
telegram/: services.py
texts/: admin.py  apps.py  exceptions.py  models.py  urls.py  views.py
(+326 files in other folders)
